--- a/src/apps.scss
+++ b/src/apps.scss
@@ -43,6 +43,9 @@ header {
         border-bottom: 1px solid black;
       }
     }
+    #headernavmobile {
+      display: none;
+    }
   }
 }
 
@@ -120,7 +123,7 @@ header {
       background: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.5) 100%
+        rgba(0, 0, 0, 0.7) 100%
       );
       z-index: 1;
     }
@@ -145,7 +148,7 @@ header {
   }
 
   // Masquer les éléments après le 6ème
-  .tile-list a:nth-child(n + 7) {
+  .tile-list a:nth-child(n + 22) {
     display: none;
   }
 }
@@ -213,11 +216,11 @@ footer {
     max-height: 500px; // Valeur max pour la transition
     opacity: 1; // Rendre visible l'élément
     padding: 5px 10px; // Ajouter du padding quand ouvert
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
   }
+}
+ul {
+  list-style-type: none;
+  padding-left: 0;
 }
 
 /* Error */
@@ -248,97 +251,257 @@ footer {
 
   .cover {
     height: 400px;
-    object-fit: cover;
+    // object-fit: fill;
     width: 100%;
     border-radius: 30px;
   }
 
-  .title-host {
+  .carousel-container {
+    height: 415px;
+    width: 100%;
+    border-radius: 30px;
+    position: relative; /* Pour placer les éléments relatifs à ce conteneur */
+    overflow: hidden; /* Empêche le débordement des éléments au-delà du conteneur */
+
+    .carousel-slide {
+      height: 100%;
+    }
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      // border-radius: 30px;
+    }
+
+    .carousel-counter {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      color: white;
+
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 1.2rem;
+    }
+  }
+
+  .active {
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+  }
+
+  .arrows {
+    top: 0;
+    bottom: 0;
+    position: absolute;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    cursor: pointer;
+  }
 
-    #hostnamepic {
+  #left-arrow {
+    left: 0;
+  }
+  #right-arrow {
+    right: 0;
+  }
+
+  .carousel-wrapper {
+    display: flex; /* Utiliser flex pour aligner les éléments */
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.title-host {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  #hostnamepic {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 30px;
+
+    #logement-name-text {
       display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 30px;
+    }
 
-      #logement-name-text {
-        display: flex;
-      }
+    img {
+      width: 65px;
+      border-radius: 50%;
+    }
+    span {
+      color: #ff6060;
+      display: flex;
+      flex-direction: column;
+      width: 98px;
+      align-self: baseline;
+      text-align: right;
+      align-self: auto;
+      font-size: 19px;
+    }
+  }
 
+  h1 {
+    font-weight: 500;
+    color: #ff6060;
+  }
+}
+
+#logement-description {
+  p {
+    margin: 0px;
+    position: relative;
+    bottom: 20px;
+  }
+}
+
+#tags-rating {
+  display: flex;
+  justify-content: space-between;
+  #tags {
+    display: flex;
+    gap: 15px;
+
+    h2 {
+      font-size: 15px;
+      font-weight: 600;
+      background-color: #ff6060;
+      color: white;
+      padding: 5px 15px;
+      border-radius: 10px;
+    }
+  }
+}
+
+#logement-collapse {
+  display: flex;
+  justify-content: space-between;
+
+  .collapse-container {
+    width: 47%;
+
+    .collapse-content {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
+
+#rating {
+  display: flex;
+  // width: 15%;
+  justify-content: space-between;
+  align-items: center;
+
+  svg {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
+
+/****** Media queries ***********/
+
+/* Small devices (phones, less than 768px) */
+@media (max-width: 767.98px) {
+  #navigation {
+    gap: 15%;
+    margin-right: 80px;
+    #headernavdesktop {
+      display: none;
+    }
+    #headernavmobile {
+      display: flex !important;
+      font-size: 12px;
+      flex-wrap: nowrap;
+      width: 110%;
+    }
+  }
+
+  header {
+    margin: 20px 0px 0px 30px;
+    gap: 18%;
+    #navigation {
+      display: flex;
+    }
+    #logo {
+      display: inline-block;
+      width: 30%;
       img {
-        width: 65px;
-        border-radius: 50%;
+        height: 50%;
+        display: block;
       }
-      span {
-        color: #ff6060;
-        display: flex;
-        flex-direction: column;
-        width: 98px;
-        align-self: baseline;
-        text-align: right;
-        align-self: auto;
-        font-size: 19px;
+    }
+  }
+
+  #banner {
+    height: 111px;
+    margin-top: 0px;
+    h1 {
+      font-size: 24px;
+      margin-left: 20px;
+      line-height: 24px;
+      padding-right: 100px;
+    }
+  }
+
+  .tile-list {
+    display: flex;
+    flex-direction: column;
+  }
+  #img-galery {
+    .tilepic {
+      height: 255px;
+      margin-bottom: 15px;
+    }
+  }
+  // .tile-list a:nth-child(n + 4) {
+  //   display: none;
+  // }
+
+  #logement {
+    .carousel-container {
+      height: 255px;
+      width: 95%;
+      margin: auto;
+      border-radius: 10px;
+
+      .carousel-counter {
+        display: none;
       }
+    }
+    svg {
+      max-width: 24px;
+      height: auto;
     }
 
     h1 {
       font-weight: 500;
-      color: #ff6060;
+      font-size: 18px;
     }
-  }
 
-  #logement-description {
     p {
-      margin: 0px;
-      position: relative;
-      bottom: 20px;
+      font-weight: 500;
+      font-size: 14px;
+      position: unset;
     }
-  }
+    #hostnamepic {
+      display: none;
+    }
 
-  #tags-rating {
-    display: flex;
-    justify-content: space-between;
-    #tags {
-      display: flex;
-      gap: 15px;
-
+    #tags-rating {
+      flex-direction: column;
       h2 {
-        font-size: 15px;
-        font-weight: 600;
-        background-color: #ff6060;
-        color: white;
-        padding: 5px 15px;
-        border-radius: 10px;
+        font-size: 10px;
+        border-radius: 4px;
+        // min-width: 84px;
+        line-height: 14.26px;
+        font-weight: 700;
       }
-    }
-  }
-
-  #logement-collapse {
-    display: flex;
-    justify-content: space-between;
-
-    .collapse-container {
-      width: 47%;
-
-      .collapse-content {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  }
-
-  #rating {
-    display: flex;
-    // width: 15%;
-    justify-content: space-between;
-    align-items: center;
-
-    svg {
-      margin-left: 5px;
-      margin-right: 5px;
     }
   }
 }
